--- a/trunk/tests/RTTIvsFASTRTTI/RTTIvsFAST.vcproj
+++ b/trunk/tests/RTTIvsFASTRTTI/RTTIvsFAST.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="RTTIvsFASTRTTI"
+	Name="RTTIvsFAST"
 	ProjectGUID="{A22C4C89-2252-481D-AFE0-79B3DB462131}"
-	RootNamespace="RTTIvsFAKERTTI"
+	RootNamespace="RTTIvsFAST"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="USE_FAKE_RTTI;USE_REAL_RTTI"
+				PreprocessorDefinitions="USE_FAST_RTTI;USE_REAL_RTTI"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="USE_FAKE_RTTI;USE_REAL_RTTI"
+				PreprocessorDefinitions="USE_FAST_RTTI;USE_REAL_RTTI"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
@@ -229,7 +229,7 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release_FAKE|Win32"
+			Name="Release_FAST|Win32"
 			OutputDirectory="$(SolutionDir)\bin\"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
@@ -255,7 +255,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				EnableIntrinsicFunctions="true"
-				PreprocessorDefinitions="USE_FAKE_RTTI"
+				PreprocessorDefinitions="USE_FAST_RTTI"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				RuntimeTypeInfo="false"
@@ -273,7 +273,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(OutDir)\$(ProjectName)_FAKE.exe"
+				OutputFile="$(OutDir)\$(ProjectName)_FAST.exe"
 				GenerateDebugInformation="false"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
