--- a/trunk/prj/vs2012/fast-rtti.vcxproj
+++ b/trunk/prj/vs2012/fast-rtti.vcxproj
@@ -142,6 +142,12 @@
   <ItemGroup>
     <ClInclude Include="..\..\include\RTTI.h" />
     <ClInclude Include="..\..\include\smart_ptr.hpp" />
+    <ClInclude Include="..\..\include\unittest\smart_ptr_unittest.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\RTTI.cpp" />
