--- a/trunk/prj/vs2012/fast-rtti.vcxproj.filters
+++ b/trunk/prj/vs2012/fast-rtti.vcxproj.filters
@@ -1,21 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="source">
-      <UniqueIdentifier>{2be5e6ef-7803-47c2-bbb6-927d7d277957}</UniqueIdentifier>
-    </Filter>
     <Filter Include="include">
       <UniqueIdentifier>{74194fb5-255c-4116-9a0c-f219ad85b3d8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\RTTI.h">
+    <ClInclude Include="..\..\include\RTTI.hpp">
       <Filter>include</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\source\RTTI.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
