Added project for vs2019

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ tests/RTTIvsFASTRTTI/vs2019/.vs/REALRTTI_vs_FASTRTTI/v16/ipch/AutoPCH/5f4b1ee0f2
 tests/RTTIvsFASTRTTI/vs2019/.vs/REALRTTI_vs_FASTRTTI/v16/ipch/AutoPCH/864a81af5e68c98b/RTTITEST.ipch
 tests/RTTIvsFASTRTTI/vs2019/.vs/REALRTTI_vs_FASTRTTI/v16/ipch/AutoPCH/b6ed6883107db229/RTTITEST.ipch
 tests/RTTIvsFASTRTTI/vs2019/.vs/REALRTTI_vs_FASTRTTI/v16/ipch/AutoPCH/fca5379b2c84c84f/RTTITEST.ipch
+tests/UsageTest/.vs/UsageTest/v16/.suo
+tests/UsageTest/.vs/UsageTest/v16/Browse.VC.db
+tests/UsageTest/.vs/UsageTest/v16/ipch/AutoPCH/3ceadb80a423c0d2/USAGETEST.ipch
+tests/UsageTest/.vs/UsageTest_vs2019/v16/.suo
+tests/UsageTest/.vs/UsageTest_vs2019/v16/Browse.VC.db
