Ignore generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ tests/UsageTest/.vs/UsageTest_vs2019/v16/Browse.VC.opendb
 tests/UsageTest/Debug/UsageTest_vs2019.exe.recipe
 tests/UsageTest/Debug/UsageTest_vs2019.log
 tests/UsageTest/Debug/UsageTest_vs2019.vcxproj.FileListAbsolute.txt
+tests/UsageTest/UsageTest.xcworkspace/xcuserdata/vasile.cristian.xcuserdatad/UserInterfaceState.xcuserstate
